# toss-files

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  prd.md  vite.config.ts
docs/: WORKFLOW.md
docs/phases/: phase-1-setup.md  phase-2-backend.md  phase-3-frontend.md  phase-4-polish.md
src/: App.tsx  constants.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/adb/: client.rs  parser.rs
src-tauri/src/commands/: device_cmd.rs  file_cmd.rs  mod.rs  path_util.rs  transfer_cmd.rs
src-tauri/src/device/: manager.rs  types.rs
src-tauri/src/transfer/: mod.rs  queue.rs  service.rs  types.rs
src/components/device/: DeviceGuide.tsx  DeviceStatus.tsx
src/components/file-browser/: Breadcrumb.tsx  EmptyState.tsx  FilePanel.tsx  FileRow.tsx
src/components/transfer/: TransferBar.tsx  TransferQueue.tsx
src/components/ui/: ConfirmDialog.tsx  ContextMenu.tsx  Toast.tsx  Toolbar.tsx
src/hooks/: useDevice.ts  useFileSystem.ts  useKeyboardShortcuts.ts  useTransfer.ts
src/lib/: commands.ts  events.ts  fileUtils.ts
src/types/: device.ts  file.ts  transfer.ts
